# sis-api/swagger_server/models/quotes.py
@@ -6,28 +6,17 @@ from datetime import date, datetime  # noqa: F401
 from typing import List, Dict  # noqa: F401
 
 from swagger_server.models.base_model_ import Model
+from swagger_server.models.quote import Quote  # noqa: F401,E501
 from swagger_server import util
 
 
-class ClaimStatus(Model):
+class Quotes(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
-
-    """
-    allowed enum values
-    """
-    SUBMITTED = "Submitted"
-    UNDERREVIEW = "UnderReview"
-    EVIDENCEREQUESTED = "EvidenceRequested"
-    AWAITINGCUSTOMERAPPROVAL = "AwaitingCustomerApproval"
-    ACCEPTED = "Accepted"
-    PROCESSING = "Processing"
-    RESOLVED = "Resolved"
-    REJECTED = "Rejected"
     def __init__(self):  # noqa: E501
-        """ClaimStatus - a model defined in Swagger
+        """Quotes - a model defined in Swagger
 
         """
         self.swagger_types = {
@@ -37,12 +26,12 @@ class ClaimStatus(Model):
         }
 
     @classmethod
-    def from_dict(cls, dikt) -> 'ClaimStatus':
+    def from_dict(cls, dikt) -> 'Quotes':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The ClaimStatus of this ClaimStatus.  # noqa: E501
-        :rtype: ClaimStatus
+        :return: The Quotes of this Quotes.  # noqa: E501
+        :rtype: Quotes
         """
         return util.deserialize_model(dikt, cls)
